--- a/app/src/main/res/layout/layout_variable.xml
+++ b/app/src/main/res/layout/layout_variable.xml
@@ -33,4 +33,14 @@
         android:text="CLICK ME!"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtCountBtnClicks" />
+    <TextView
+        android:id="@+id/txtElapsedTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:text="Elapsed Time"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnClickMe" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
